# crud-bottle-neo4j

./: pyproject.toml
src/crud_bottle_neo4j/: config.py
src/crud_bottle_neo4j/models/: Person.py
src/crud_bottle_neo4j/services/: Neo4jService.py
