[project]
name = "crud-bottle-neo4j"
version = "0.1.0"
description = ""
authors = [
    {name = "jcarlossc",email = "josecscosta@fac.pe.senac.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bottle (>=0.13.4,<0.14.0)",
    "neo4j (>=6.0.3,<7.0.0)"
]

[tool.poetry]
packages = [{include = "crud_bottle_neo4j", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
