[project]
name = "crud-bottle-neo4j"
version = "0.1.0"
description = ""
authors = [
    {name = "jcarlossc",email = "jcarlossc1977@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bottle (>=0.13.4,<0.14.0)",
    "neo4j (>=6.0.3,<7.0.0)"
]

[tool.poetry]
packages = [{include = "crud_bottle_neo4j", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
mypy = "^1.19.0"
isort = "^7.0.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
